# SDL2

./: README.md
1-HelloWorld/: CMakeLists.txt  hello.cpp
10-SpriteSheets/: CMakeLists.txt  sprite_sheets.cpp
11-ColorModulation/: CMakeLists.txt  color_modulation.cpp
12-AlphaBlending/: CMakeLists.txt  alpha.cpp
13-AnimatedSprites/: CMakeLists.txt  animated_sprites.cpp
14-Rotation/: CMakeLists.txt  rotation.cpp
15-TrueTypeFonts/: CMakeLists.txt  true_type_fonts.cpp
16-MouseEvents/: CMakeLists.txt  mouse_events.cpp
17-KeyStates/: CMakeLists.txt  keystates.cpp
18-GamePadsNJoysticks/: CMakeLists.txt  gamepads.cpp
19-ForceFeedback/: CMakeLists.txt  feedback.cpp
2-EventDriven/: CMakeLists.txt  event_driven.cpp
20-SoundEffects/: CMakeLists.txt  sound_effects.cpp
21-Timing/: CMakeLists.txt  timing.cpp
22-AdvancedTimers/: CMakeLists.txt  advanced_timers.cpp
23-FrameRate/: CMakeLists.txt  frame_rate.cpp
24-CapFrameRate/: CMakeLists.txt  cap_frame_rate.cpp
25-Motion/: CMakeLists.txt  motion.cpp
26-CollisionDetect/: CMakeLists.txt  collision_detection.cpp
27-ppCollisionDetect/: CMakeLists.txt  ppcollision_detection.cpp
28-circularCD/: CMakeLists.txt  circular_cd.cpp
29-Scrolling/: CMakeLists.txt  scrolling.cpp
3-KeyLogic/: CMakeLists.txt  key_logic.cpp
30-ScrollingBG/: CMakeLists.txt  scrolling_backgrounds.cpp
31-TextInputNClipbroadHandling/: CMakeLists.txt  text_input_and_clipboard_handling.cpp
4-Surfaces/: CMakeLists.txt  surfaces.cpp
5-Images/: CMakeLists.txt  images.cpp
6-Textures/: CMakeLists.txt  textures.cpp
7-GeometryRendering/: CMakeLists.txt  geometry.cpp
8-ViewPort/: CMakeLists.txt  viewport.cpp
9-ColorKeying/: CMakeLists.txt  color_keying.cpp
